main + vista, pequeños ajustes en todo para que funcione